--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <h2>Скачать</h2>
         <p>Нажмите на кнопку ниже, чтобы скачать последнюю версию Expensive Client Unofficial для Minecraft:</p>
         <div class="buttons">
-            <a href="https://workupload.com/file/aacffJddzUW" target="_blank">Скачать последнюю версию</a>
+            <a href="https://workupload.com/file/rAvT6XV56g6" target="_blank">Скачать последнюю версию</a>
         </div>
     </section>
 
@@ -152,15 +152,7 @@
         <h2>Changelog</h2>
         <div class="changelog">
             <ul>
-                <li>[+] LegitAura - Хитбоксы + триггербот</li>
-                <li>[+] Killaura - Добавлены моды Grim/Vulkan и Matrix</li>
-                <li>[+] Hitsound - Добавлен мод critical</li>
-                <li>[+] Themes - Добавлено 60+ тем</li>
-                <li>[/] ClickGUI - Переписан</li>
-                <li>[/] HUD - Переписан</li>
-                <li>[/] Antibot - Переписан</li>
-                <li>[/] TargetHUD - Пофикшен баг с обходом</li>
-                <li>[/] Другие мелкие изменения</li>
+                <li>[+] Killaura - Добавлен мод VulkanFOV</li>
             </ul>
         </div>
     </section>
