--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
         margin-bottom: 20px;
     }
 
+    .version-info {
+        background-color: #333333;
+        padding: 15px;
+        border-radius: 8px;
+        margin: 20px 0;
+        border: 1px solid #9933ff;
+    }
+
+    .version-info p {
+        margin: 8px 0;
+    }
+
+    .version-info strong {
+        color: #fc03ba;
+    }
+
     .buttons {
         display: flex;
         gap: 15px;
@@ -135,6 +151,12 @@
     <section id="about">
         <h2>О чите</h2>
         <p>Expensive Client Unofficial — Это чит для Minecraft продолживший обновления expensive версии <strong>3.1</strong></p>
+        
+        <div class="version-info">
+            <p><strong>Текущая версия:</strong> 3.2 Unofficial</p>
+            <p><strong>Последнее обновление:</strong> 07.12.2025</p>
+        </div>
+        
         <div class="buttons">
             <a href="https://t.me/demidcheats" target="_blank">Наш Telegram</a>
         </div>
