--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>Expensive Client Unofficial — Это чит для Minecraft продолживший обновления expensive версии <strong>3.1</strong></p>
         
         <div class="version-info">
-            <p><strong>Текущая версия:</strong> 3.2 Unofficial</p>
+            <p><strong>Текущая версия:</strong> 3.2.1 Unofficial</p>
             <p><strong>Последнее обновление:</strong> 07.12.2025</p>
         </div>
         
@@ -164,7 +164,7 @@
 
     <section id="download">
         <h2>Скачать</h2>
-        <p>Нажмите на кнопку ниже, чтобы скачать последнюю версию Expensive Client Unofficial для Minecraft:</p>
+        <p>Нажмите на кнопку ниже, чтобы скачать последнюю версию Expensive Client Unofficial:</p>
         <div class="buttons">
             <a href="https://workupload.com/file/rAvT6XV56g6" target="_blank">Скачать последнюю версию</a>
         </div>
