--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>Expensive Client Unofficial — Это чит для Minecraft продолживший обновления expensive версии <strong>3.1</strong></p>
         
         <div class="version-info">
-            <p><strong>Текущая версия:</strong> 3.2.1 Unofficial</p>
+            <p><strong>Текущая версия:</strong> 3.2.2 Unofficial</p>
             <p><strong>Последнее обновление:</strong> 07.12.2025</p>
         </div>
         
@@ -166,7 +166,7 @@
         <h2>Скачать</h2>
         <p>Нажмите на кнопку ниже, чтобы скачать последнюю версию Expensive Client Unofficial:</p>
         <div class="buttons">
-            <a href="https://workupload.com/file/rAvT6XV56g6" target="_blank">Скачать последнюю версию</a>
+            <a href="https://workupload.com/file/XANpggvgbXu" target="_blank">Скачать последнюю версию</a>
         </div>
     </section>
 
@@ -174,7 +174,8 @@
         <h2>Changelog</h2>
         <div class="changelog">
             <ul>
-                <li>[+] Killaura - Добавлен мод VulkanFOV</li>
+                <li>[+] Killaura - Добавлен мод Lerp</li>
+                <li>[+] TargetESP - Добавлены слайдеры R,G,B,A и мод Rounded</li>
             </ul>
         </div>
     </section>
