--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
             <ul>
                 <li>[+] Killaura - Добавлен мод Lerp</li>
                 <li>[+] TargetESP - Добавлены слайдеры R,G,B,A и мод Rounded</li>
+                <li>[+] Speed - Добавлены моды Test, Vanilla, NCP, AAC, Bhop</li>
+                <li>[+] NoSlow - Добавлены моды Vanilla, AAC, NCP, Matrix, Holytime</li>
             </ul>
         </div>
     </section>
