--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <li>[+] Killaura - Добавлен мод Lerp</li>
                 <li>[+] TargetESP - Добавлены слайдеры R,G,B,A и мод Rounded</li>
                 <li>[+] Speed - Добавлены моды Test, Vanilla, NCP, AAC, Bhop</li>
-                <li>[+] NoSlow - Добавлены моды Vanilla, AAC, NCP, Matrix, Holytime</li>
+                <li>[+] NoSlow - Добавлены моды Vanilla, AAC, NCP, Matrix, Grim, Holytime</li>
             </ul>
         </div>
     </section>
