--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p>Expensive Client Unofficial — Это чит для Minecraft продолживший обновления expensive версии <strong>3.1</strong></p>
         
         <div class="version-info">
-            <p><strong>Текущая версия:</strong> 3.2.2 Unofficial</p>
+            <p><strong>Текущая версия:</strong> 3.2.3 Unofficial</p>
             <p><strong>Последнее обновление:</strong> 08.12.2025</p>
         </div>
         
@@ -166,7 +166,7 @@
         <h2>Скачать</h2>
         <p>Нажмите на кнопку ниже, чтобы скачать последнюю версию Expensive Client Unofficial:</p>
         <div class="buttons">
-            <a href="https://workupload.com/file/XANpggvgbXu" target="_blank">Скачать последнюю версию</a>
+            <a href="https://workupload.com/file/bYaLvhmPgUx" target="_blank">Скачать последнюю версию</a>
         </div>
     </section>
 
@@ -174,10 +174,10 @@
         <h2>Changelog</h2>
         <div class="changelog">
             <ul>
-                <li>[+] Killaura - Добавлен мод Lerp</li>
-                <li>[+] TargetESP - Добавлены слайдеры R,G,B,A и мод Rounded</li>
-                <li>[+] Speed - Добавлены моды Test, Vanilla, NCP, AAC, Bhop</li>
-                <li>[+] NoSlow - Добавлены моды Vanilla, AAC, NCP, Matrix, Grim, Holytime</li>
+                <li>[+] Killaura - Добавлены моды Spookytime, ReallyWorld, Intave Test</li>
+                <li>[+] NoSlow - Добавлен мод Reallyworld Old</li>
+                <li>[+] AntiBot - Переписан под ReallyWorld</li>
+                <li>[+] NoSlow - Другие мелкие фиксы</li>
             </ul>
         </div>
     </section>
