--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <li>[+] Killaura - Добавлены моды Spookytime, ReallyWorld, Intave Test</li>
                 <li>[+] NoSlow - Добавлен мод Reallyworld Old</li>
                 <li>[+] AntiBot - Переписан под ReallyWorld</li>
-                <li>[+] NoSlow - Другие мелкие фиксы</li>
+                <li>[+] Killaura - Другие мелкие фиксы</li>
             </ul>
         </div>
     </section>
