--- a/recode.html
+++ b/recode.html
@@ -154,12 +154,12 @@
 
     <section id="about">
         <h2>О Recode версии</h2>
-        <p>Expensive Client Recode — это полностью переписанная с нуля версия клиента с современной архитектурой и улучшенной производительностью.</p>
+        <p>Expensive Client Recode — Это та же unofficial версия но на базе exp 2.0</p>
         
         <div class="version-info">
-            <p><strong>Текущая версия:</strong> 4.0.0 Alpha</p>
-            <p><strong>Статус:</strong> В разработке</p>
-            <p><strong>Последнее обновление:</strong> 08.12.2025</p>
+            <p><strong>Текущая версия:</strong> 2.0.0 Alpha</p>
+            <p><strong>Статус:</strong> Открытый Alpha тест</p>
+            <p><strong>Последнее обновление:</strong> 09.12.2025</p>
         </div>
     </section>
 
@@ -176,9 +176,9 @@
         <h2>Changelog Recode</h2>
         <div class="changelog">
             <ul>
-                <li>Здесь будет changelog для Recode версии</li>
-                <li>Добавьте свои изменения</li>
-                <li>Или оставьте так</li>
+                <li>[+] Killaura - Добавлен мод Matrix</li>
+                <li>[+] Killaura - Встроен Antibot под reallyworld</li>
+                <li>[/] Watermark - Пофикшен баг</li>
             </ul>
         </div>
     </section>
