--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
 
     .recode-badge {
-        background-color: #b9bf11;
+        background-color: #edf50a;
         color: white;
         padding: 3px 8px;
         border-radius: 4px;
