--- a/recode.html
+++ b/recode.html
@@ -154,11 +154,11 @@
 
     <section id="about">
         <h2>О Recode версии</h2>
-        <p>Expensive Client Recode — Это та же unofficial версия но на базе exp 2.0</p>
+        <p>Expensive Client Recode — Это та же unofficial версия но на базе exp 3.1 ANCIENT</p>
         
         <div class="version-info">
-            <p><strong>Текущая версия:</strong> 2.0.0 Alpha</p>
-            <p><strong>Статус:</strong> Открытый Alpha тест</p>
+            <p><strong>Текущая версия:</strong> 2.0.0 Beta</p>
+            <p><strong>Статус:</strong> Открытый Beta тест</p>
             <p><strong>Последнее обновление:</strong> 09.12.2025</p>
         </div>
     </section>
@@ -167,7 +167,7 @@
         <h2>Скачать Recode</h2>
         <p>Нажмите на кнопку ниже, чтобы скачать Recode версию:</p>
         <div class="buttons">
-            <a href="https://workupload.com/file/bYaLvhmPgUx" target="_blank">Скачать Recode</a>
+            <a href="https://workupload.com/file/crUCSJtSrgc" target="_blank">Скачать Recode</a>
             <a href="https://t.me/demidcheats" target="_blank">Telegram</a>
         </div>
     </section>
@@ -176,9 +176,12 @@
         <h2>Changelog Recode</h2>
         <div class="changelog">
             <ul>
-                <li>[+] Killaura - Добавлен мод Matrix</li>
-                <li>[+] Killaura - Встроен Antibot под reallyworld</li>
-                <li>[/] Watermark - Пофикшен баг</li>
+                <li>[+] Killaura - Добавлен мод Spookytime</li>
+                <li>[+] Killaura - Добавлен мод ReallyWorld</li>
+                <li>[+] TargetESP - Добавлены слайдеры и мод Rounded</li>
+                <li>[+] HitSound - Добавлен мод Critical</li>
+                <li>[+] Antibot - Переписан под reallyworld</li>
+                <li>[+] Themes - Заменены</li>
             </ul>
         </div>
     </section>
