--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <nav>
             <a href="#about">О чите</a>
             <a href="#changelog">Changelog</a>
-            <a href="recoded.html">Recode версия<span class="recode-badge">NEW</span></a>
+            <a href="recode.html">Recode версия<span class="recode-badge">NEW</span></a>
         </nav>
     </header>
 
